--- a/public/css/main.css
+++ b/public/css/main.css
@@ -876,6 +876,7 @@ body.ru .title {
 #slider .slider-item {
     background-repeat: no-repeat;
     background-position: center center;
+    background-size: cover;
     height: 460px;
     width: 100%;
 }
@@ -906,14 +907,14 @@ body.ru .title {
 #acc-info .price {
     margin-bottom: 20px;
 }
-#acc-info .booking-btn a {
+#acc-info .booking-btn input[type="submit"] {
     background-color: #D2AB67;
     color: #ffffff;
+    cursor: pointer;
     font-size: 1.2em;
     height: 38px;
     line-height: 38px;
-    padding: 0 15px;
-    min-width: 200px;
+    min-width: 230px;
 }
 
 #offers-first-text,
@@ -1219,6 +1220,10 @@ body.ru .title {
     font-size: 1.6em;
     margin: 15px 0;
     padding-top: 10px;
+}
+#error-room-req {
+    font-size: 1.2em;
+    margin-bottom: 10px;
 }
 /* booking 3 */
 #booking-3 {
