--- a/public/css/main.css
+++ b/public/css/main.css
@@ -282,6 +282,11 @@ body .page {
     padding-left: 110px;
     text-align: right;
 }
+#header-right .top-title {
+    min-height: 32px;
+    margin-top: 30px;
+    width: 100%;
+}
 #search-form {
     height: 32px;
     margin-top: 30px;
@@ -433,6 +438,12 @@ body .page {
 #weather-block .currency {
     height: 100%;
     width: 101px;
+}
+#weather-block .currency a {
+    color: #878787;
+}
+#weather-block .currency a:hover {
+    text-decoration: underline;
 }
 #weather-block .weather p {
     font-size: 0.6em;
